# Cat_the_console_helper

./: .gitignore  LICENSE  README.md  pyproject.toml
felis_assistant/: addressbook.py  clean.py  functions.py  weather_func.py
felis_cat_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
